# NoiseCanceler

./: .gitignore
software/: CMakeLists.txt
software/cmake/: CodeCoverage.cmake  build_unittests.cmake  build_win.cmake
software/scripts/: build_and_run_unittests.sh  clang_tidy_folder.sh  cmake_build_debug.sh  cmake_build_debug_win.sh  cmake_build_release_win.sh  cmake_build_simulations.sh  cppcheck_src.sh
software/src/: .clang-format  .clang.tidy  CMakeLists.txt  Template.cpp  Template.h
software/src/application/: CMakeLists.txt  main.c  main.cpp
software/src/controller/: CMakeLists.txt
software/src/domain/: CMakeLists.txt  LMS.cpp  LMS.h  lms.c  lms.h
software/src/hal/: CMakeLists.txt
software/src/infrastructure/: AudioSampler.cpp  AudioSampler.h  CMakeLists.txt  audio_sampler.c  audio_sampler.h
software/test/: CMakeLists.txt
software/test/simulations/: CMakeLists.txt  main.cpp  matplotlibcpp.h
software/test/unittest/src/: CMakeLists.txt
software/test/unittest/src/application/: CMakeLists.txt
software/test/unittest/src/controller/: CMakeLists.txt
software/test/unittest/src/domain/: CMakeLists.txt
software/test/unittest/src/hal/: CMakeLists.txt
software/test/unittest/src/infrastructure/: CMakeLists.txt
